# musk_vs_trump

./: .gitignore  404.html  DEPLOYMENT.md  README.md  app.js  charts.js  demo.py  index.html  index.oldhtml  manifest.json  netlify.toml  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  robots.txt  script.js  server.js  style.css  styles.css  test_application.sh  vite.config.js
.github/workflows/: deploy-frontend.yml  deploy.yml  gh-pages.yml  github-pages.yml  pages.yml
backend/: Makefile  ai_algorithms_loader.py  app.py  data_collector.py  db_manager.py  deep_learning_integration.py  models.py  pywinassistant_interface.py  requirements.txt  sentiment_analyzer.py  start_backend.sh
backend/data/: reputation_data.json
data/: reputation_data.json
database/: schema.sql
docs/: README.md  ReputationGraph.js  TIMEGRAPH_README.md  _config.yml  app.js  charts.js  dashboard.html  data.js  index.html  index.html.backup  styles.css
frontend/: .env.production  .gitignore  App.js  README.md  app.js  index.html  package-lock.json  package.json  reputation_data.json  script.js  setup_frontend.bat  setup_frontend.sh  style.css  styles.css
frontend/public/: index.html  manifest.json  race3d.html
frontend/src/: App.css  App.js  ReputationGraph.css  ReputationGraph.js  index.css
public/: App.js  index.html
src/: App.jsx
src/components/: DeployButton.jsx  DeployButton.test.js  MobileDeployButton.jsx  ReputationGraph.jsx
