[tool.poetry]
name = "musk-vs-trump"
version = "0.1.0"
description = "AI reputation tracker for public figures through sentiment analysis"
authors = ["Musk vs Trump Team <team@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "2.3.3"
requests = "2.31.0"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"